--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
 		"K8s",
 		"Cloud",
 		"podman",
-		"Helm"
+		"Helm",
+		"kubernetes-extension-cloud-provider"
 	],
 	"icon": "images/openshift_extension.png",
 	"main": "./out/src/extension",
@@ -795,6 +796,16 @@
 				"command": "openshift.component.deleteSourceFolder",
 				"title": "Delete Source Code Folder",
 				"category": "OpenShift"
+			},
+			{
+				"command": "openshift.sandbox.open.dashboard",
+				"title": "Open Console",
+				"category": "OpenShift"
+			},
+			{
+				"command": "openshift.sandbox.signup",
+				"title": "Signup for Sandbox",
+				"category": "OpenShift"
 			}
 		],
 		"keybindings": [
@@ -1146,6 +1157,16 @@
 				}
 			],
 			"view/item/context": [
+                {
+                    "command": "openshift.sandbox.signup",
+                    "category": "1@1",
+                    "when": "viewItem == openshift.sandbox.status.none"
+                },
+                {
+                    "command": "openshift.sandbox.open.dashboard",
+                    "category": "1@1",
+                    "when": "viewItem == openshift.sandbox.status.ready"
+                },
 				{
 					"command": "clusters.openshift.csv.create",
 					"group": "1@1",
