Add UI to create service binding
Right click on a component in the components view and select "Bind
Service" in order to bind the component to an Operator-backed service.

In order for this to work:
- the service binding operator must be installed on the cluster
- an operator that manages instances of services must be installed
  (I tested with the RHOAS operator)
- there must be an instance of the service that is managed by the operator in the current project

Other things in this PR:
- Add a walkthrough GIF of using the UI
- Add a smoke test to check that the "Bind Service" context menu item
  exists
- Fix the smoke tests.
  This includes fixing the existing test case for #2780,
  even though we are going to rewrite that as a WebView UI soon.
  I did this, since for the "Bind Service" smoke test,
  we need a component present in the components view.

Signed-off-by: David Thompson <davthomp@redhat.com>

--- a/package.json
+++ b/package.json
@@ -441,6 +441,11 @@
 				"category": "OpenShift"
 			},
 			{
+				"command": "openshift.component.binding.add",
+				"title": "Bind Service",
+				"category": "OpenShift"
+			},
+			{
 				"command": "openshift.component.exitDevMode",
 				"title": "Stop Dev",
 				"category": "OpenShift"
@@ -509,6 +514,10 @@
 				"command": "openshift.open.developerConsole.palette",
 				"title": "Open Console Dashboard for Current Cluster",
 				"category": "OpenShift"
+			},
+			{
+				"command": "openshift.open.operatorBackedServiceCatalog",
+				"title": "Open Operator Backed Service Catalog"
 			},
 			{
 				"command": "openshift.component.debug",
@@ -911,6 +920,10 @@
 					"when": "view == openshiftProjectExplorer"
 				},
 				{
+					"command": "openshift.open.operatorBackedServiceCatalog",
+					"when": "false"
+				},
+				{
 					"command": "openshift.component.debug",
 					"when": "view == openshiftProjectExplorer"
 				},
@@ -1068,6 +1081,10 @@
 				},
 				{
 					"command": "openshift.component.openInBrowser",
+					"when": "false"
+				},
+				{
+					"command": "openshift.component.binding.add",
 					"when": "false"
 				}
 			],
@@ -1308,6 +1325,11 @@
 					"command": "openshift.component.undeploy",
 					"when": "view == openshiftComponentsView && viewItem =~ /openshift\\.component.*\\.dep-nrn.*/ || viewItem =~ /openshift\\.component.*\\.dep-run.*/",
 					"group": "c2@1"
+				},
+				{
+					"command": "openshift.component.binding.add",
+					"when": "view == openshiftComponentsView && viewItem =~ /openshift\\.component.*\\.dev-nrn.*/",
+					"group": "c2@2"
 				},
 				{
 					"command": "openshift.component.showDevTerminal",
