--- a/.editorconfig
+++ b/.editorconfig
@@ -18,3 +18,7 @@ insert_final_newline     = true
 
 [*.md]
 trim_trailing_whitespace = false
+
+[./package.json]
+indent_style = tab
+indent_size = 4
