--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
 		"kubernetes-extension-cloud-provider",
 		"debuggers",
 		"K8s",
-		"Cloud"
+		"Cloud",
+        "podman"
 	],
 	"icon": "images/openshift_extension.png",
 	"main": "./out/src/extension",
