--- a/.github/workflows/check-crc.yml
+++ b/.github/workflows/check-crc.yml
@@ -18,7 +18,7 @@ jobs:
           LATEST_TOOL_RELEASE_RESP=$(gh release --repo ${{ env.TOOL_REPO }} view --json tagName,name,url)
           echo "LATEST_TOOL_RELEASE=$(echo ${LATEST_TOOL_RELEASE_RESP} | jq -r .tagName | sed 's|v||')" >> $GITHUB_ENV
           echo "LATEST_TOOL_URL=$(echo ${LATEST_TOOL_RELEASE_RESP} | jq -r .url)" >> $GITHUB_ENV
-          echo "LATEST_OPENSHIFT_RELEASE=$(echo ${LATEST_CRC_RELEASE_RESP} | jq -r .name | cut -d'-' -f2)" >> $GITHUB_ENV
+          echo "LATEST_OPENSHIFT_RELEASE=$(echo ${LATEST_CRC_RELEASE_RESP} | jq -r .name | cut -d"-" -f2)" >> $GITHUB_ENV
       - name: Find existing PR for CRC version
         run: |
           echo PR_URL=$(gh pr --repo ${{ github.repository }} list --state all --search "update crc ${{env.LATEST_TOOL_RELEASE}} in:title" --json url) >> $GITHUB_ENV
