--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
 		"@mui/material": "^5.14.15",
 		"@mui/styles": "^5.14.15",
 		"@rjsf/core": "^5.13.2",
+		"@rjsf/mui": "^5.13.2",
 		"@rjsf/validator-ajv8": "^5.13.2",
 		"@segment/analytics-next": "^1.59.0",
 		"@svgr/plugin-jsx": "^8.1.0",
@@ -112,6 +113,7 @@
 		"@types/express": "^4.17.20",
 		"@types/fs-extra": "^11.0.3",
 		"@types/lodash": "^4.14.200",
+		"@types/make-fetch-happen": "^10.0.2",
 		"@types/mocha": "^10.0.3",
 		"@types/node": "^16.18.59",
 		"@types/proxyquire": "^1.3.30",
@@ -167,6 +169,7 @@
 		"react-scroll-to-top": "^3.0.0",
 		"react-syntax-highlighter": "^15.5.0",
 		"remap-istanbul": "^0.13.0",
+		"showdown": "^2.1.0",
 		"shx": "^0.3.3",
 		"sinon": "^17.0.0",
 		"sinon-chai": "^3.7.0",
@@ -721,8 +724,8 @@
 				"category": "OpenShift"
 			},
 			{
-				"command": "clusters.openshift.csv.create",
-				"title": "Create Service ...",
+				"command": "openshift.service.create",
+				"title": "Create Operator-Backed Service",
 				"category": "OpenShift"
 			},
 			{
@@ -902,6 +905,10 @@
 			{
 				"id": "serverlessfunction/buildConfig",
 				"label": "Build Configuration"
+			},
+			{
+				"id": "view/item/context/createService",
+				"label": "Create Service"
 			}
 		],
 		"viewsContainers": {
@@ -1408,6 +1415,18 @@
 					"group": "c1@1"
 				}
 			],
+			"view/item/context/createService": [
+				{
+					"command": "openshift.componentTypesView.registry.openHelmChartsInView",
+					"when": "view == openshiftProjectExplorer && viewItem == openshift.k8sContext && isLoggedIn",
+					"group": "c2"
+				},
+				{
+					"command": "openshift.service.create",
+					"when": "view == openshiftProjectExplorer && viewItem == openshift.k8sContext && isLoggedIn",
+					"group": "c2"
+				}
+			],
 			"view/item/context": [
 				{
 					"command": "openshift.sandbox.signup",
@@ -1418,11 +1437,6 @@
 					"command": "openshift.sandbox.open.dashboard",
 					"category": "1@1",
 					"when": "viewItem == openshift.sandbox.status.ready"
-				},
-				{
-					"command": "clusters.openshift.csv.create",
-					"group": "1@1",
-					"when": "view == extension.vsKubernetesExplorer && viewItem == openshift.resource.csv.crdDescription"
 				},
 				{
 					"command": "clusters.openshift.deployment.openConsole",
@@ -1495,7 +1509,7 @@
 					"group": "c1"
 				},
 				{
-					"command": "openshift.componentTypesView.registry.openHelmChartsInView",
+					"submenu": "view/item/context/createService",
 					"when": "view == openshiftProjectExplorer && viewItem == openshift.k8sContext && isLoggedIn",
 					"group": "c2"
 				},
