--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
 		"debuggers",
 		"K8s",
 		"Cloud",
-        "podman"
+		"podman"
 	],
 	"icon": "images/openshift_extension.png",
 	"main": "./out/src/extension",
@@ -129,7 +129,9 @@
 		"@mui/material": "^5.11.12",
 		"@mui/styles": "^5.11.12",
 		"@rjsf/core": "^5.0.0-beta.14",
-		"@rjsf/material-ui": "^5.0.0-beta.14",
+		"@rjsf/mui": "^5.6.2",
+		"@rjsf/utils": "^5.6.2",
+		"@rjsf/validator-ajv8": "^5.6.2",
 		"@segment/analytics-next": "^1.17.4",
 		"@types/byline": "^4.2.33",
 		"@types/chai": "^4.3.0",
@@ -564,11 +566,6 @@
 				"category": "OpenShift"
 			},
 			{
-				"command": "openshift.service.delete.palette",
-				"title": "Delete Service",
-				"category": "OpenShift"
-			},
-			{
 				"command": "clusters.openshift.useProject",
 				"title": "Use Project",
 				"category": "OpenShift"
@@ -958,7 +955,15 @@
 				},
 				{
 					"command": "openshift.service.delete",
-					"when": "view == openshiftProjectExplorer"
+					"when": "false"
+				},
+				{
+					"command": "openshift.service.create",
+					"when": "false"
+				},
+				{
+					"command": "clusters.openshift.csv.create",
+					"when": "false"
 				},
 				{
 					"command": "clusters.openshift.deploy.dc.showLog",
@@ -1453,7 +1458,7 @@
 							"onCommand:openshift.componentType.newComponent"
 						]
 					},
-                    {
+					{
 						"id": "helmChart",
 						"title": "Work with Helm Charts",
 						"description": "Browse the catalog to discover and install Helm Charts.\n[Browse Helm Chart](command:openshift.componentTypesView.registry.openHelmChartsInView)",
