Integration test suite for `odo` commands we call
- remove unused commands from `commands.ts` and unused methods from
  `odo.ts`
  - Notably, remove `ODO.getApplications()`, `ODO.getComponents()`,
    and the in-memory tree representing the cluster state,
    since they don't work properly and we have replacements for them
- rewrite integration tests for `commands.ts` and `odo.ts`
- report test coverage for integration tests
- add the integration tests to the UI test Jenkinsfile workflow

Depends on #2865, #2863, #2862

Fixes #2799

Signed-off-by: David Thompson <davthomp@redhat.com>

--- a/.editorconfig
+++ b/.editorconfig
@@ -19,6 +19,9 @@ insert_final_newline     = true
 [*.md]
 trim_trailing_whitespace = false
 
+[Jenkinsfile]
+indent_size = 2
+
 [./package.json]
 indent_style = tab
 indent_size = 4
