--- a/.eslintrc
+++ b/.eslintrc
@@ -101,7 +101,8 @@
     "radix": 2,
     "no-trailing-spaces": "error",
     "@typescript-eslint/prefer-regexp-exec": 0,
-    "quotes": [ "error", "single"]
+    "quotes": [ "error", "single"],
+    "@typescript-eslint/no-unused-vars": [ "error", { "vars": "local", "args": "none" }]
   },
   "overrides": [
     {
