--- a/test/ui/Jenkinsfile
+++ b/test/ui/Jenkinsfile
@@ -13,6 +13,12 @@ node('rhel8') {
     }
 
     withEnv(['JUNIT_REPORT_PATH=report.xml']) {
+        stage('integration tests') {
+            wrap([$class: 'Xvnc']) {
+                sh "npm run test-integration"
+                junit 'report.xml'
+            }
+        }
         stage('UI smoke test') {
             wrap([$class: 'Xvnc']) {
                 sh "npm run smoke-test"
