--- a/.eslintrc
+++ b/.eslintrc
@@ -16,7 +16,10 @@
   "parserOptions": {
     "ecmaVersion": 2018,
     "comment": true,
-    "project": "./tsconfig.json",
+    "project": [
+      "./tsconfig.json",
+      "./src/webview/tsconfig.json"
+    ],
     "sourceType": "module"
   },
   "plugins": [
@@ -106,13 +109,19 @@
   },
   "overrides": [
     {
-        "files": ["*.test.ts"],
-        "rules": {
-            "no-unused-expressions": "off",
-            "@typescript-eslint/unbound-method" : "off",
-            "max-nested-callbacks" : "off",
-            "@typescript-eslint/no-unsafe-assignment": 1
-        }
+      "files": ["*.test.ts"],
+      "rules": {
+        "no-unused-expressions": "off",
+        "@typescript-eslint/unbound-method" : "off",
+        "max-nested-callbacks" : "off",
+        "@typescript-eslint/no-unsafe-assignment": 1
+      }
+    },
+    {
+      "files": ["./src/@types/**.d.ts"],
+      "rules": {
+        "header/header": "off"
+      }
     }
   ]
 }
