--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,9 @@
             "es6",
             "dom"
         ],
+        "typeRoots": [
+            "./src/@types"
+        ],
         "sourceMap": true,
         "rootDir": ".",
         /* Strict Type-Checking Option */
@@ -35,6 +38,7 @@
         "src/webview/git-import/app",
         "src/webview/helm-chart/app",
         "src/webview/feedback/app",
+        "src/webview/openshift-terminal/app",
         "src/webview/common"
     ]
 }
