--- a/package.json
+++ b/package.json
@@ -405,6 +405,11 @@
 				"category": "OpenShift"
 			},
 			{
+				"command": "openshift.componentTypesView.registry.helmChart.install",
+				"title": "Open Helm Charts",
+				"category": "OpenShift"
+			},
+			{
 				"command": "openshift.project.delete",
 				"title": "Delete",
 				"category": "OpenShift"
@@ -1042,6 +1047,10 @@
 				},
 				{
 					"command": "openshift.componentTypesView.registry.openHelmChartsInView",
+					"when": "false"
+				},
+				{
+					"command": "openshift.componentTypesView.registry.helmChart.install",
 					"when": "false"
 				},
 				{
