fix ui changes in helm chart view (#2874)
* fix ui changes in helm chart view

Signed-off-by: msivasubramaniaan <msivasub@redhat.com>

--- a/package.json
+++ b/package.json
@@ -407,6 +407,16 @@
 				"category": "OpenShift"
 			},
 			{
+				"command": "openshift.componentTypesView.registry.helmChart.install",
+				"title": "Open Helm Charts",
+				"category": "OpenShift"
+			},
+			{
+				"command": "openshift.componentTypesView.registry.helmChart.open",
+				"title": "Open Helm Charts",
+				"category": "OpenShift"
+			},
+			{
 				"command": "openshift.project.delete",
 				"title": "Delete",
 				"category": "OpenShift"
@@ -1044,6 +1054,14 @@
 				},
 				{
 					"command": "openshift.componentTypesView.registry.openHelmChartsInView",
+					"when": "false"
+				},
+				{
+					"command": "openshift.componentTypesView.registry.helmChart.install",
+					"when": "false"
+				},
+				{
+					"command": "openshift.componentTypesView.registry.helmChart.open",
 					"when": "false"
 				},
 				{
