--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "vscode-openshift-connector",
 	"displayName": "OpenShift Toolkit",
 	"description": "Fast iterative application development on Red Hat OpenShift and Kubernetes",
-	"version": "1.3.0",
+	"version": "1.4.0",
 	"license": "MIT",
 	"publisher": "redhat",
 	"author": "Red Hat",
@@ -41,7 +41,8 @@
 		"debuggers",
 		"K8s",
 		"Cloud",
-		"podman"
+		"podman",
+		"Helm"
 	],
 	"icon": "images/openshift_extension.png",
 	"main": "./out/src/extension",
