--- a/src/webview/cluster/app/tsconfig.json
+++ b/src/webview/cluster/app/tsconfig.json
@@ -20,7 +20,8 @@
         ],
         "baseUrl": ".",
         "resolveJsonModule": true,
-        "esModuleInterop": true
+        "esModuleInterop": true,
+        "skipLibCheck": true
     },
     "exclude": [
         "node_modules"
