--- a/src/webview/devfile-registry/app/tsconfig.json
+++ b/src/webview/devfile-registry/app/tsconfig.json
@@ -14,7 +14,8 @@
         "typeRoots": ["../../../../node_modules/@types", "../../@types"],
         "baseUrl": ".",
         "resolveJsonModule": true,
-        "esModuleInterop": true
+        "esModuleInterop": true,
+        "skipLibCheck": true
     },
     "exclude": ["node_modules"]
 }
