--- a/package.json
+++ b/package.json
@@ -49,27 +49,10 @@
 	"scripts": {
 		"verify": "node ./out/build/verify-tools.js",
 		"vscode:prepublish": "npm run build",
-		"compile": "npm-run-all compile:*",
-		"compile:ext": "tsc -p ./",
-		"compile:views": "webpack --mode production --config src/webview/webpack.config.js",
-		"compile:git-import-view": "webpack --mode development --config src/webview/git-import/webpack.config.js",
-		"dev:compile:log-view": "webpack --mode development --config src/webview/log/webpack.config.js",
-		"dev:compile:describe-view": "webpack --mode development --config src/webview/describe/webpack.config.js",
-		"dev:compile:cluster-view": "webpack --mode development --config src/webview/cluster/webpack.config.js",
-		"dev:compile:create-service-view": "webpack --mode development --config src/webview/create-service/webpack.config.js",
-		"dev:compile:devfile-registry-view": "webpack --mode development --config src/webview/devfile-registry/webpack.config.js",
-		"dev:compile:welcome-view": "webpack --mode development --config src/webview/welcome/webpack.config.js",
-		"dev:compile:git-import-view": "webpack --mode development --config src/webview/git-import/webpack.config.js",
-		"dev:compile:helm-chart-view": "webpack --mode development --config src/webview/helm-chart/webpack.config.js",
-		"dev:run:log-view": "webpack-dev-server --mode development --config src/webview/log/webpack.config.js",
-		"dev:run:describe-view": "webpack-dev-server --mode development --config src/webview/describe/webpack.config.js",
-		"dev:run:cluster-view": "webpack-dev-server --port 9222 --mode development --config src/webview/cluster/webpack.config.js",
-		"dev:run:devfile-registry-view": "webpack-dev-server --port 9222 --mode development --config src/webview/devfile-registry/webpack.config.js",
-		"dev:run:welcome-view": "webpack-dev-server --port 9222 --mode development --config src/webview/welcome/webpack.config.js",
-		"dev:run:git-import-view": "webpack-dev-server --port 9222 --mode development --config src/webview/git-import/webpack.config.js",
-		"dev:run:helm-chart-view": "webpack-dev-server --port 9222 --mode development --config src/webview/helm-chart/webpack.config.js",
-		"dev:run:create-service-view": "webpack-dev-server --mode development --config src/webview/create-service/webpack.config.js",
-		"watch": "tsc -watch -p ./",
+		"compile": "run-p compile:*",
+		"compile:ext": "tsc -b ./",
+		"compile:checkWebviews": "tsc -p ./src/webview -noEmit",
+		"compile:webviews": "node ./build/esbuild.mjs",
 		"clean": "shx rm -rf out/build out/coverage out/src out/test out/tools out/test-resources out/*Viewer",
 		"lint": "eslint . --ext .ts --quiet",
 		"lint-fix": "eslint . --ext .ts --fix",
@@ -84,8 +67,8 @@
 		"update-deps": "ncu --upgrade --loglevel verbose --packageFile package.json && npm update",
 		"coverage:upload": "codecov -f coverage/coverage-final.json",
 		"build": "npm run clean && npm run lint && npm run compile && npm run bundle-tools",
-		"smoke-test": "npm run compile:ext && extest setup-and-run out/test/ui/smoke-test.js -o test/ui/settings.json -m test/ui/.mocharc.js -c max",
-		"public-ui-test": "npm run compile:ext && extest setup-and-run out/test/ui/public-ui-test.js -o test/ui/settings.json -m test/ui/.mocharc.js -c max"
+		"smoke-test": "npm run compile && extest setup-and-run out/test/ui/smoke-test.js -o test/ui/settings.json -m test/ui/.mocharc.js -c max",
+		"public-ui-test": "npm run compile && extest setup-and-run out/test/ui/public-ui-test.js -o test/ui/settings.json -m test/ui/.mocharc.js -c max"
 	},
 	"dependencies": {
 		"@kubernetes/client-node": "^0.16.1",
@@ -171,9 +154,10 @@
 		"call-bind": "^1.0.2",
 		"chai": "^4.3.4",
 		"codecov": "^3.8.2",
-		"copy-webpack-plugin": "^10.0.0",
 		"css-loader": "^6.5.1",
 		"decache": "^4.6.1",
+		"esbuild": "^0.17.19",
+		"esbuild-sass-plugin": "^2.9.0",
 		"eslint": "8.4.1",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-import-resolver-typescript": "^2.5.0",
@@ -187,7 +171,6 @@
 		"got": "^11.8.5",
 		"handlebars": "^4.7.7",
 		"hasha": "5.2.2",
-		"html-webpack-plugin": "^5.5.0",
 		"istanbul": "^0.4.5",
 		"leasot": "^12.0.0",
 		"mocha": "^9.1.3",
@@ -224,10 +207,7 @@
 		"typescript": "^4.5.2",
 		"unzip-stream": "^0.3.1",
 		"utf-8-validate": "^5.0.7",
-		"vscode-extension-tester": "^5.2.0",
-		"webpack": "^5.76.0",
-		"webpack-cli": "^4.9.1",
-		"webpack-dev-server": "^4.6.0"
+		"vscode-extension-tester": "^5.2.0"
 	},
 	"activationEvents": [
 		"onView:openshiftProjectExplorer",
