--- a/src/webview/create-service/app/tsconfig.json
+++ b/src/webview/create-service/app/tsconfig.json
@@ -19,6 +19,7 @@
             "../../@types"
         ],
         "baseUrl": ".",
+        "skipLibCheck": true
     },
     "exclude": [
         "node_modules"
