--- a/src/webview/describe/app/tsconfig.json
+++ b/src/webview/describe/app/tsconfig.json
@@ -19,6 +19,7 @@
             "../../../../node_modules/@types",
             "../../@types"
         ],
+        "skipLibCheck": true
     },
     "exclude": [
         "node_modules"
