--- a/src/webview/welcome/app/tsconfig.json
+++ b/src/webview/welcome/app/tsconfig.json
@@ -21,6 +21,7 @@
         "baseUrl": ".",
         "resolveJsonModule": true,
         "esModuleInterop": true,
+        "skipLibCheck": true
     },
     "exclude": [
         "node_modules"
