Use the extensions from `./test-resources/extensions` during UI tests
Also:
- skip compiling the code when running from the command line,
  since `extest` does this for us
- use the `-i` flag in the call to `extest`, which installs the
  dependencies of the extension
- make more timeout changes to the git import test suite to try to
  stabilize the suite

Fixes #2919

Signed-off-by: David Thompson <davthomp@redhat.com>

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -89,7 +89,10 @@
                 "${workspaceFolder}/test/ui/settings.json",
                 "-m",
                 "--mocha_config",
-                "${workspaceFolder}/test/ui/.mocharc.js"
+                "${workspaceFolder}/test/ui/.mocharc.js",
+                "-e",
+                "./test-resources/extensions",
+                "-i"
             ],
             "outFiles": [
                 "${workspaceFolder}/out/**/*.js"
@@ -114,7 +117,9 @@
                 "${workspaceFolder}/test/ui/settings.json",
                 "-m",
                 "--mocha_config",
-                "${workspaceFolder}/test/ui/.mocharc.js"
+                "${workspaceFolder}/test/ui/.mocharc.js",
+                "-e",
+                "./test-resources/extensions"
             ],
             "outFiles": [
                 "${workspaceFolder}/out/**/*.js"
