--- a/.github/workflows/check-odo.yml
+++ b/.github/workflows/check-odo.yml
@@ -3,6 +3,7 @@ name: check-odo
 on:
   schedule:
     - cron: "0 8 * * *"
+  workflow_dispatch:
 jobs:
   check-odo-repo:
     runs-on: ubuntu-latest
